<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom|withText"
        android:id="@+id/action_refresh">
    </item>

    <!-- todo: add to above: app:showAsAction="ifRoom|withText" -->


    <item
        android:title="@string/action_new"
        app:showAsAction="ifRoom|withText"
        android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_add">
    </item>

    <item
        android:title="@string/action_public_trips"
        android:id="@+id/action_public_trips">
    </item>

    <item
        android:title="@string/action_my_trips"
        android:id="@+id/action_my_trips">
    </item>

    <item
        android:title="@string/action_logout"
        android:id="@+id/action_logout">
    </item>

    <item
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:id="@+id/action_settings"
        android:orderInCategory="100"/>

</menu>

</menu>