<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_post"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_save"
        android:id="@+id/action_post">
    </item>

    <item
        android:title="@string/action_delete"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_delete"
        android:id="@+id/action_delete">
    </item>

    <item
        android:title="@string/action_logout"
        android:id="@+id/action_logout">
    </item>

    <item
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:id="@+id/action_settings"
        android:orderInCategory="100"/>

</menu>