<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="wrap_content"
        android:layout_width="match_parent" style="?android:listSeparatorTextViewStyle"
        android:text="@string/trip_name_label"/>

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/trip_name_hint"
        android:id="@+id/enter_trip_name"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent" style="?android:listSeparatorTextViewStyle"
        android:text="@string/trip_details_label"/>


    -<LinearLayout
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/trip_desc_hint"
        android:id="@+id/enter_trip_description"/>

    <TextView
        android:paddingTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/start_date_label"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/start_date_button"
        android:layout_weight="3"/>

    <TextView
        android:paddingTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/end_date_label"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/end_date_button"
        android:layout_weight="3"/>

    <CheckBox
        android:paddingTop="8dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/trip_public_label"
        android:id="@+id/trip_public"
        android:layout_weight="1"/>

</LinearLayout>

</LinearLayout>

</android.support.constraint.ConstraintLayout>